--- a/components/layouts/surface/SideMenu.module.css
+++ b/components/layouts/surface/SideMenu.module.css
@@ -7,3 +7,32 @@
     color: #000;
     text-decoration: none;
 }
+
+/* scrollbar track */
+.listContainer::-webkit-scrollbar {
+  width: 8px; /* width of the scrollbar */
+}
+
+/* scrollbar thumb */
+.listContainer::-webkit-scrollbar-thumb {
+  background: #888; /* color of the scrollbar thumb */
+  border-radius: 4px; /* roundness of the scrollbar thumb */
+}
+
+/* scrollbar thumb on hover */
+.listContainer::-webkit-scrollbar-thumb:hover {
+  background: #555; /* color of the scrollbar thumb on hover */
+}
+
+/* scrollbar track */
+.listContainer::-webkit-scrollbar-track {
+  background: #f1f1f1; /* color of the scrollbar track */
+}
+
+.drawerheaderleft {
+  text-align: left;
+}
+
+.contentWrapper{
+  background: linear-gradient(45deg,#013850,#0773a5) !important;
+}
