--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,4 @@
+
 html,
 body {
   min-height: 100%;
@@ -22,3 +23,37 @@ code:not([class*='language-']):after {
 code[class*='language-'] {
   padding: 0;
 }
+
+/*
+:root {
+  --primary: #f1f1f1;
+  --secondary: rgba(120, 123, 124, 0.4);
+  --tertiary: rgba(96, 98, 99, 0.6);
+}
+
+
+* {
+  scrollbar-width: thin;
+  scrollbar-color: var(--secondary) var(--primary);
+}
+
+
+*::-webkit-scrollbar {
+  width: 17px;
+}
+
+*::-webkit-scrollbar-track {
+  background: var(--primary);
+  border-radius: 5px;
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: var(--secondary);
+  border-radius: 14px;
+  border: 3px solid var(--primary);
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: var(--tertiary);
+}
+*/
