--- a/pages/surface/clouds/elasticins/create/index.module.css
+++ b/pages/surface/clouds/elasticins/create/index.module.css
@@ -1,13 +1,35 @@
+/* .Footer {
+    width: 100%;
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    padding: 15px;
+    text-align: center;
+    background: linear-gradient(45deg, #013850, #0773a5);
+    z-index: 10 !important; 
+} */
+
 .Footer {
   width: 100%;
-  height: 100px; 
-  position: fixed; 
   display: flex;
+  position: sticky;
   padding: 15px;
-  bottom: 0;
-  margin-left: -24px;
+  margin-top: 20px;
+  bottom: 0px;
+  -webkit-box-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  justify-content: center;
+  border-top-left-radius:7px ;
+  border-top-right-radius:7px ;
   background: linear-gradient(45deg, #013850, #0773a5);
-  z-index: 999;
+  z-index: 10;
+}
+
+.textnowrap {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .cardActive {
@@ -140,7 +162,12 @@
 .DiskSizePlus:hover {
   color: #015578;
 }
-
+.tableScrollBox {
+  width: 20%;
+}
+.tableScrollSelect {
+  width: 100%;
+}
 /************* Instance CSS ***********/
 .InstanceInfoIcon {
   position: absolute;
@@ -231,8 +258,8 @@
   position: absolute;
   width: 30px;
   height: 30px;
-  top: 21px;
-  left: 31%;
+  top: 0px;
+  right: 0px;
   color: #015578;
   cursor: pointer;
 }
@@ -247,4 +274,24 @@
   background-color: #E5F0F4;
   border-radius: 12px;
   line-height: 30px;
+}
+
+/************* Rsponsive CSS ************/
+@media only screen and (max-width: 1023px) {
+  .tableScrollBox {
+      width: 170px;
+  }
+  .tableScrollSelect{
+      width: 170px;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  .InstanceInfoDetail { 
+      width: auto;
+  }
+}
+
+.responsiveSelect {
+  width: 100%; /* Make the select box full width on mobile devices */
 }
